# IotProject

./: README.md  pyproject.toml  requirements.txt
iot_proj/: __init__.py  deps.py  doctor_services.py  form_models.py  models.py  user_services.py  websoc.py
static/js/: common.js  doctor.js  patient.js
templates/: base.html  chatSec.html  index.html
templates/doctor/: home.html
templates/doctor/auth/: login.html  register.html
templates/patients/: home copy.html  home.html
templates/patients/auth/: login.html  register.html
