[tool.poetry]
name = "iot-proj"
version = "0.1.0"
description = ""
authors = ["Owusu Kelvin Clark <kelvinclark@lokaitech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
jinja2 = "^3.1.4"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"
websockets = "^14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
